Fixed padding and spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,9 @@ section {
   padding: 100px;
 }
 
+section.instagram {
+  padding: 60px 50px;
+}
 section.secondary {
   background-color: rgb(239, 229, 245);
 }
@@ -287,7 +290,7 @@ footer a:hover {
     grid-gap: 32px;
   }
   .instagram-embeds {
-    margin: 30px 10px;
+    margin: 30px 5px;
   }
   .instagram-embeds .grid-3-columns {
     grid-template-columns: 1fr;
@@ -313,6 +316,6 @@ footer a:hover {
     margin: 30px auto;
   }
   section.instagram {
-    padding: 0;
+    padding: 30px 0;
   }
 }
